workshop04/t.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/status: '{"version":"d36ff46d2def0caba37f639f09514b17c4e80078f749a46aae84439790d2b560","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null}'
  creationTimestamp: "2020-05-22T06:17:08Z"
  generateName: fortune-deploy-779b4cf74-
  labels:
    app: fortune-pod
    dept: engineering
    istio.io/rev: default
    pod-template-hash: 779b4cf74
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: fortune-pod
    service.istio.io/canonical-revision: latest
  name: fortune-deploy-779b4cf74-26vg9
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: fortune-deploy-779b4cf74
    uid: 2cf1f5d1-6d74-492b-aaab-7816aeed0c51
  resourceVersion: "245864"
  selfLink: /api/v1/namespaces/default/pods/fortune-deploy-779b4cf74-26vg9
  uid: 1d25f688-bc48-4cb4-80b8-483a15958751
spec:
  containers:
  - image: chukmunnlee/fortune:v1
    imagePullPolicy: IfNotPresent
    name: fortune-container
    ports:
    - containerPort: 3000
      name: http-port
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-t68ng
      readOnly: true
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --serviceCluster
    - fortune-pod.$(POD_NAMESPACE)
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --trust-domain=cluster.local
    - --concurrency
    - "2"
    image: docker.io/istio/proxyv2:1.6.0-rc.2
    imagePullPolicy: Always
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      initialDelaySeconds: 1
      periodSeconds: 2
      successThreshold: 1
      timeoutSeconds: 1
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 10m
        memory: 40Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-t68ng
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: pool-bic4k58tg-3ckcm
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 1337
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-t68ng
    secret:
      defaultMode: 420
      secretName: default-token-t68ng
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:17:21Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:17:27Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:17:27Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:17:08Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://6b9fea9a4d4e4af5da33615a5bcf21abafa2955090e597c61b6aacb913f851b4
    image: chukmunnlee/fortune:v1
    imageID: docker-pullable://chukmunnlee/fortune@sha256:b69de0945086617cd8f1e33a7309f9b67e7a8466830996832363993c3873cc3d
    lastState: {}
    name: fortune-container
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-05-22T06:17:22Z"
  - containerID: docker://34ce6c1ec0be1562bfaf5302234e98fce7f95685b360234d38becb3a8ae995d8
    image: istio/proxyv2:1.6.0-rc.2
    imageID: docker-pullable://istio/proxyv2@sha256:d61b8b1071d801403687d92d5e07e81d7d9573a240244bae95385c7fecf0f3e3
    lastState: {}
    name: istio-proxy
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-05-22T06:17:25Z"
  hostIP: 10.104.0.3
  initContainerStatuses:
  - containerID: docker://b248a2f20fd48b0fa93f9ef3fd3ad76506d07c0308e970697d8833c4246df996
    image: istio/proxyv2:1.6.0-rc.2
    imageID: docker-pullable://istio/proxyv2@sha256:d61b8b1071d801403687d92d5e07e81d7d9573a240244bae95385c7fecf0f3e3
    lastState: {}
    name: istio-init
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://b248a2f20fd48b0fa93f9ef3fd3ad76506d07c0308e970697d8833c4246df996
        exitCode: 0
        finishedAt: "2020-05-22T06:17:21Z"
        reason: Completed
        startedAt: "2020-05-22T06:17:20Z"
  phase: Running
  podIP: 10.244.0.118
  podIPs:
  - ip: 10.244.0.118
  qosClass: Burstable
  startTime: "2020-05-22T06:17:08Z"
